--- a/Practice paper 4.ipynb
+++ b/Practice paper 4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwl1uYbL1g36iH4H5w+1Yu",
+      "authorship_tag": "ABX9TyP53NU+5K77ihEjJ5/roXOF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,6 +223,43 @@
           "text": [
             "{'ajay', 'kiran', 'Ali', 'ravi', 'Rajesh'}\n",
             "{4001, 20001, 50001, 34532, 90001}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# --- 3. Control Flow: The for Loop (Iteration) ---\n",
+        "\n",
+        "# List of numbers to iterate over [3]\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "total = 0 # Initialize a running total at zero [3]\n",
+        "\n",
+        "# Loop runs for every number in the list\n",
+        "# It grabs the 1, adds it, grabs the 2, adds it, and so on [3]\n",
+        "for num in numbers:\n",
+        "    total = total + num # Add the current number to the running total\n",
+        "\n",
+        "# Prints the final result (1 + 2 + 3 + 4 + 5 = 15) [3]\n",
+        "print(\"sum of total value is\",total)\n",
+        "# Expected Output: 15\n"
+      ],
+      "metadata": {
+        "id": "1CcQof3DIw7P",
+        "outputId": "be36682b-62a3-4d5c-e043-e080a4e961c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sum of total value is 15\n"
           ]
         }
       ]
