--- a/Copy_of_weather_api_nov2025.ipynb
+++ b/Copy_of_weather_api_nov2025.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "source": [
         "import requests\n",
-        "response = requests.get(\"https://api.openweathermap.org/data/2.5/weather?q=Abu Dhabi&appid=79007029562c2ab46617d801d8018750&units=metric\")\n",
+        "response = requests.get(\"https://api.openweathermap.org/data/2.5/weather?q=Abu dhabi&appid=79007029562c2ab46617d801d8018750&units=metric\")\n",
         "print(response.json())"
       ],
       "metadata": {
@@ -37,7 +37,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O8qPx9TOc28r",
-        "outputId": "241ff089-3f6d-4544-fe0a-e297b17b6992"
+        "outputId": "f362fc29-1e60-4944-a435-db7436c9c028"
       },
       "execution_count": null,
       "outputs": [
@@ -45,7 +45,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'coord': {'lon': 54.3667, 'lat': 24.4667}, 'weather': [{'id': 800, 'main': 'Clear', 'description': 'clear sky', 'icon': '01n'}], 'base': 'stations', 'main': {'temp': 27.95, 'feels_like': 28.39, 'temp_min': 27.01, 'temp_max': 28.86, 'pressure': 1019, 'humidity': 50, 'sea_level': 1019, 'grnd_level': 1019}, 'visibility': 10000, 'wind': {'speed': 2.57, 'deg': 340}, 'clouds': {'all': 0}, 'dt': 1763392502, 'sys': {'type': 2, 'id': 2032466, 'country': 'AE', 'sunrise': 1763347185, 'sunset': 1763386529}, 'timezone': 14400, 'id': 292968, 'name': 'Abu Dhabi', 'cod': 200}\n"
+            "{'coord': {'lon': 54.3667, 'lat': 24.4667}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04d'}], 'base': 'stations', 'main': {'temp': 23.01, 'feels_like': 23.04, 'temp_min': 20.06, 'temp_max': 23.01, 'pressure': 1018, 'humidity': 64, 'sea_level': 1018, 'grnd_level': 1019}, 'visibility': 7000, 'wind': {'speed': 1.54, 'deg': 150}, 'clouds': {'all': 100}, 'dt': 1763438621, 'sys': {'type': 1, 'id': 7533, 'country': 'AE', 'sunrise': 1763433627, 'sunset': 1763472913}, 'timezone': 14400, 'id': 292968, 'name': 'Abu Dhabi', 'cod': 200}\n"
           ]
         }
       ]
@@ -76,6 +76,8 @@
         "       max_temp = weather_data[\"main\"][\"temp_max\"]\n",
         "       min_temp = weather_data[\"main\"][\"temp_min\"]\n",
         "       wind_speed = weather_data[\"wind\"][\"speed\"]\n",
+        "       #weather_description = weather_data[\"weather\"][\"description\"]\n",
+        "       country = weather_data[\"sys\"][\"country\"]\n",
         "\n",
         "\n",
         "       print(f\"Weather in {city}:\")\n",
@@ -84,6 +86,8 @@
         "       print(f\"Max Temperature: {max_temp}°C:\")\n",
         "       print(f\"Min Temperature: {min_temp}°C:\")\n",
         "       print(f\"Wind Speed: {wind_speed} m/s:\")\n",
+        "      #print(f\"Weather description:{weather_description}\")\n",
+        "       print(f\"country:{country}:\")\n",
         "\n",
         "   except requests.exceptions.RequestException:\n",
         "        print(\"Error occured\")\n",
@@ -98,7 +102,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SGkcxKbv2eSY",
-        "outputId": "5e65a33f-c1aa-4fb5-d3cd-7694ab1d6c72"
+        "outputId": "6e6cb006-3d94-4311-e5b2-d67651100c63"
       },
       "execution_count": null,
       "outputs": [
@@ -106,14 +110,103 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the name of city:Dubai\n",
-            "Weather in Dubai:\n",
-            "Temperature 41°C:\n",
-            "Humidity : 40%\n",
-            "Max Temperature: 43.16°C:\n",
-            "Min Temperature: 40.96°C:\n",
-            "Wind Speed: 7.2 m/s:\n"
+            "Enter the name of city:dubai\n",
+            "Weather in dubai:\n",
+            "Temperature 25.96°C:\n",
+            "Humidity : 53%\n",
+            "Max Temperature: 25.96°C:\n",
+            "Min Temperature: 24.14°C:\n",
+            "Wind Speed: 2.06 m/s:\n",
+            "country:AE:\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import gradio as gr\n",
+        "import requests\n",
+        "\n",
+        "def get_weather(city):\n",
+        "    api_key = \"79007029562c2ab46617d801d8018750\"  # replace with your own key\n",
+        "    url = f\"https://api.openweathermap.org/data/2.5/weather?q={city}&appid={api_key}&units=metric\"\n",
+        "    response = requests.get(url)\n",
+        "    data = response.json()\n",
+        "    if data[\"cod\"] == 200:\n",
+        "        temp = data[\"main\"][\"temp\"]\n",
+        "        description = data[\"weather\"][0][\"description\"]\n",
+        "        return f\"The current temperature in {city} is {temp}°C with {description}.\"\n",
+        "    else:\n",
+        "        return \"Sorry, I couldn't find weather information for that city.\"\n",
+        "\n",
+        "# Professional Gradio interface\n",
+        "iface = gr.Interface(\n",
+        "    fn=get_weather,\n",
+        "    inputs=\"text\",\n",
+        "    outputs=\"text\",\n",
+        "    title=\"🌍 Global Weather App\",\n",
+        "    description=\"Get real-time weather updates for any city worldwide.\",\n",
+        "    theme=\"default\",\n",
+        "    # Use a local file like 'logo.png' or a hosted image URL\n",
+        "    # Example: logo=\"https://upload.wikimedia.org/wikipedia/commons/e/e7/Weather_icon.png\"\n",
+        "    # If you have a local logo file, place it in the same folder and use \"logo.png\"\n",
+        "    # Note: Gradio supports 'article' for extra info too\n",
+        "    examples=[[\"Abu Dhabi\"], [\"London\"], [\"New York\"], [\"Tokyo\"],[\"Munich\"]],\n",
+        "    allow_flagging=\"never\"\n",
+        ")\n",
+        "\n",
+        "iface.launch()"
+      ],
+      "metadata": {
+        "id": "u9GP7VE3b6vl",
+        "outputId": "ae3ba85b-aabe-467c-d89d-c6af784ec04a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 680
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/gradio/interface.py:415: UserWarning: The `allow_flagging` parameter in `Interface` is deprecated. Use `flagging_mode` instead.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It looks like you are running Gradio on a hosted Jupyter notebook, which requires `share=True`. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
+            "\n",
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "* Running on public URL: https://92949a4df55250fffb.gradio.live\n",
+            "\n",
+            "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://92949a4df55250fffb.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 34
         }
       ]
     },
@@ -152,10 +245,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 616
+          "height": 645
         },
         "id": "MyKDmQYxiZ6P",
-        "outputId": "f85ea62b-2292-41eb-8c99-05f449e7b97f"
+        "outputId": "eb479685-cb0b-47c7-f686-3cfb951f70b2"
       },
       "execution_count": null,
       "outputs": [
@@ -163,44 +256,22 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "Note: opening Chrome Inspector may crash demo inside Colab notebooks.\n",
+            "It looks like you are running Gradio on a hosted Jupyter notebook, which requires `share=True`. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
-            "To create a public link, set `share=True` in `launch()`.\n"
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "* Running on public URL: https://1afb8dce8e9a287b86.gradio.live\n",
+            "\n",
+            "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
         },
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.core.display.Javascript object>"
+              "<IPython.core.display.HTML object>"
             ],
-            "application/javascript": [
-              "(async (port, path, width, height, cache, element) => {\n",
-              "                        if (!google.colab.kernel.accessAllowed && !cache) {\n",
-              "                            return;\n",
-              "                        }\n",
-              "                        element.appendChild(document.createTextNode(''));\n",
-              "                        const url = await google.colab.kernel.proxyPort(port, {cache});\n",
-              "\n",
-              "                        const external_link = document.createElement('div');\n",
-              "                        external_link.innerHTML = `\n",
-              "                            <div style=\"font-family: monospace; margin-bottom: 0.5rem\">\n",
-              "                                Running on <a href=${new URL(path, url).toString()} target=\"_blank\">\n",
-              "                                    https://localhost:${port}${path}\n",
-              "                                </a>\n",
-              "                            </div>\n",
-              "                        `;\n",
-              "                        element.appendChild(external_link);\n",
-              "\n",
-              "                        const iframe = document.createElement('iframe');\n",
-              "                        iframe.src = new URL(path, url).toString();\n",
-              "                        iframe.height = height;\n",
-              "                        iframe.allow = \"autoplay; camera; microphone; clipboard-read; clipboard-write;\"\n",
-              "                        iframe.width = width;\n",
-              "                        iframe.style.border = 0;\n",
-              "                        element.appendChild(iframe);\n",
-              "                    })(7860, \"/\", \"100%\", 500, false, window.element)"
+            "text/html": [
+              "<div><iframe src=\"https://1afb8dce8e9a287b86.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
@@ -211,7 +282,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 5
         }
       ]
     }
