--- a/energy_plant_visual_ai_clip_project.ipynb
+++ b/energy_plant_visual_ai_clip_project.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "8175d725",
       "metadata": {
         "id": "8175d725",
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "ce7239af",
       "metadata": {
         "id": "ce7239af",
@@ -377,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "61b15d62",
       "metadata": {
         "id": "61b15d62",
@@ -432,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "2a9ae274",
       "metadata": {
         "id": "2a9ae274"
@@ -527,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "a0b68130",
       "metadata": {
         "id": "a0b68130"
@@ -544,7 +544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "bfdf2548",
       "metadata": {
         "id": "bfdf2548",
@@ -597,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "e30ca0b9",
       "metadata": {
         "id": "e30ca0b9",
@@ -684,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "6a6cf7bd",
       "metadata": {
         "id": "6a6cf7bd",
@@ -747,43 +747,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 15,
       "id": "5d8f4110",
       "metadata": {
         "id": "5d8f4110",
-        "outputId": "66f06a9c-e35c-44d6-8526-50ac4ecc0090",
+        "outputId": "3567d7ed-e9dd-4769-d467-9ad405d96911",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 384
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'mlflow'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3837093891.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 10.1 Minimal MLflow logging example for the visual model (optional)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmlflow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Configure MLflow (here: local folder; change to remote server if needed)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mlflow'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Run the batch classification first to create `batch_df`.\n"
+          ]
         }
       ],
       "source": [
         "# 10.1 Minimal MLflow logging example for the visual model (optional)\n",
         "\n",
+        "!pip install -q mlflow\n",
         "import mlflow\n",
         "\n",
         "# Configure MLflow (here: local folder; change to remote server if needed)\n",
